<resources>
    <string name="app_name">Learn Sign Language</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ha">ሀ</string>
    <string name="play_btn">Play</string>
    <string name="communicate">Communicate</string>
    <string name="sign_translation">Sign Translation</string>
    <string name="video_call">Video call</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="load_more">Load more</string>
    <string name="rate_us">Rate us</string>
    <string name="learn_basic">Basic </string>
    <string name="learn_intermediate">Intermediate </string>
    <string name="learn_advance">Advance </string>
    <string name="fekedew_hailemariam">Fekedew Hailemariam</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="number">Numbers</string>
    <string name="ethiopian_basic_sign_language">Basic sign language</string>
    <string name="alphabets">Alphabet</string>
    <string name="body_part">Body Part</string>
    <string name="family">Family</string>
    <string name="day">Day</string>
    <string name="maths">Maths</string>
    <string name="choose_level">Choose your level</string>
    <string name="albasat">"Cloths "</string>
    <string name="food_and_drink">Food</string>
    <string name="animal">Animal</string>
    <string name="nature">Natures </string>
    <string name="ethiopian_intermediate_sign_language">Intermediate sign language</string>

    <string name="vegetable">Vegetable</string>
    <string name="submit">Submit</string>
    <string name="color">Color</string>
    <string name="fruit">Fruit</string>
    <string name="fidel">ሀ ለ መ</string>
    <string name="fidelat">አማርኛ \nፊደላት</string>
    <string name="change_language">Change Language</string>

    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="ex_info">We randomly generate five question, for you do you want to  start?</string>


    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device does n\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Float</item>
        <item>Quantized</item>
    </string-array>

    <string name="device">Device:</string>
    <string name="ex_suggest">What is the meaning of the above sign?</string>
    <string name="about_us">About us</string>
    <string name="no_result">No result found</string>
    <string name="en">EN</string>
    <string name="some_settings">Some settings</string>
    <string name="search">Search</string>
    <string name="clear_fav">Clear all favorite</string>
    <string name="file_picker">"File picker "</string>
    <string name="esl">Ethiopian sign language</string>
    <string name="clear_pro">Clear progress</string>
    <string name="names">Names</string>
    <string name="weeks">Weeks</string>
    <string name="programmer">Programmer</string>
    <string name="start_again">Do you want to start again?</string>
    <string name="enough">Enough</string>
    <string name="try_again">Try again advisor</string>
    <string name="android_apps_developer">Android Apps Developer</string>
    <string name="love_pro">I love programming, web and android application developer and problem solver</string>
    <string name="where_feke">Wolkite University,Ethiopia</string>
    <string name="getaneh_aychew">Getaneh Aychew</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
</resources>
