<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/some_settings"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/changeLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/submit_bak"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:text="@string/change_language" />
    <Button
        android:id="@+id/clearAllFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/submit_bak"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:text="@string/clear_fav" />

</LinearLayout>